--- a/src/Aardvark.Base.FSharp/Aardvark.Base.FSharp.fsproj
+++ b/src/Aardvark.Base.FSharp/Aardvark.Base.FSharp.fsproj
@@ -71,6 +71,8 @@
     <Compile Include="Ag.fs" />
     <Compile Include="NewAg.fs" />
     <Compile Include="Control.fs" />
+    <Compile Include="FsPicklerExtensions.fs" />
+    <Compile Include="AdaptivePicklers.fs" />
     <None Include="paket.references" />
     <Compile Include="Native\BlobStore.fs" />
     <Compile Include="Native\Pointer.fs" />
