--- a/src/Aardvark.Base.FSharp/Aardvark.Base.FSharp.fsproj
+++ b/src/Aardvark.Base.FSharp/Aardvark.Base.FSharp.fsproj
@@ -56,6 +56,7 @@
     <Compile Include="Reflection\IL.fs" />
     <Compile Include="Reflection\Quotations.fs" />
     <Compile Include="Reflection\TypeBuilder.fs" />
+    <Compile Include="Reflection\ReflectionExtensions.fs" />
     <Compile Include="Runtime\DynamicLinker.fs" />
     <Compile Include="Runtime\ExecutableMemory.fs" />
     <Compile Include="Runtime\Assembler.fs" />
@@ -67,12 +68,10 @@
     <Compile Include="SVDM33f.fs" />
     <Compile Include="Reflection.fs" />
     <Compile Include="Runtime.fs" />
-    <Compile Include="AgHelpers.fs" />
-    <Compile Include="Ag.fs" />
-    <Compile Include="NewAg.fs" />
     <Compile Include="Control.fs" />
     <Compile Include="FsPicklerExtensions.fs" />
     <Compile Include="AdaptivePicklers.fs" />
+    <Compile Include="Ag.fs" />
     <None Include="paket.references" />
     <Compile Include="Native\BlobStore.fs" />
     <Compile Include="Native\Pointer.fs" />
