--- a/src/Aardvark.Base/paket.template
+++ b/src/Aardvark.Base/paket.template
@@ -7,3 +7,11 @@ licenseUrl http://www.apache.org/licenses/LICENSE-2.0.txt
 description
     Aardvark is an open-source platform for visual computing, real-time graphics and visualization.
 include-pdbs true
+dependencies
+    framework: netstandard2.0
+        DevILSharp ~> LOCKEDVERSION
+        System.Collections.Immutable ~> LOCKEDVERSION
+        System.Reflection.Metadata ~> LOCKEDVERSION
+    framework: netcoreapp3.0
+        DevILSharp ~> LOCKEDVERSION
+        System.Collections.Immutable ~> LOCKEDVERSION
