--- a/.github/workflows/linux.yml
+++ b/.github/workflows/linux.yml
@@ -1,13 +1,15 @@
-name: linux
+name: Linux
 
 on: 
   push:
     paths-ignore:
     - 'README.md'
+    - 'docs/'
   pull_request:
     paths-ignore:
     - 'README.md'
-
+    - 'docs/'
+    
 jobs:
   build:
 
