--- a/src/Demo/Scratch/Scratch.fsproj
+++ b/src/Demo/Scratch/Scratch.fsproj
@@ -17,6 +17,7 @@
   <ItemGroup>
     <None Include="paket.references" />
     <Compile Include="Store.fs" />
+    <Compile Include="Trie.fs" />
     <Compile Include="Program.fs" />
   </ItemGroup>
   <ItemGroup>
