Aardvark.Geometry: added Regression3d and basic tests

--- a/src/Tests/Aardvark.Geometry.Tests/Aardvark.Geometry.Tests.fsproj
+++ b/src/Tests/Aardvark.Geometry.Tests/Aardvark.Geometry.Tests.fsproj
@@ -16,6 +16,7 @@
   </PropertyGroup>
   <ItemGroup>
     <Compile Include="PolyRegion2dTests.fs" />
+    <Compile Include="Regression.fs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\Aardvark.Base\Aardvark.Base.csproj" />
