--- a/src/Aardvark.Geometry/Aardvark.Geometry.fsproj
+++ b/src/Aardvark.Geometry/Aardvark.Geometry.fsproj
@@ -15,6 +15,7 @@
   <ItemGroup>
     <Compile Include="PolyRegion2d.fs" />
     <Compile Include="Region3d.fs" />
+    <Compile Include="Regression.fs" />
     <None Include="paket.references" />
   </ItemGroup>
   <ItemGroup>
