Aardvark.Geometry: added EllipsoidRegression3d (currently untested)

--- a/src/Aardvark.Geometry/Aardvark.Geometry.fsproj
+++ b/src/Aardvark.Geometry/Aardvark.Geometry.fsproj
@@ -16,6 +16,7 @@
     <Compile Include="PolyRegion2d.fs" />
     <Compile Include="Region3d.fs" />
     <Compile Include="LinearRegression.fs" />
+    <Compile Include="EllipsoidRegression.fs" />
     <None Include="paket.references" />
   </ItemGroup>
   <ItemGroup>
