--- a/src/Aardvark.Geometry/Aardvark.Geometry.fsproj
+++ b/src/Aardvark.Geometry/Aardvark.Geometry.fsproj
@@ -17,6 +17,8 @@
     <Compile Include="Region3d.fs" />
     <Compile Include="LinearRegression.fs" />
     <Compile Include="EllipsoidRegression.fs" />
+    <Compile Include="Bvh.fs" />
+    <Compile Include="TexturePacking.fs" />
     <None Include="paket.references" />
   </ItemGroup>
   <ItemGroup>
