project file cleanup; include documentation in all packages;

--- a/src/Aardvark.Base.Extensions.SystemDrawing/Aardvark.Base.Extensions.SystemDrawing.csproj
+++ b/src/Aardvark.Base.Extensions.SystemDrawing/Aardvark.Base.Extensions.SystemDrawing.csproj
@@ -3,6 +3,7 @@
   <PropertyGroup>
     <OutputType>Library</OutputType>
     <TargetFramework>net471</TargetFramework>
+    <GenerateDocumentationFile>true</GenerateDocumentationFile>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
     <OutputPath>..\..\bin\Debug</OutputPath>
