netcoreapp3.1 target for Extensions.SystemDrawing

--- a/src/Aardvark.Base.Extensions.SystemDrawing/Aardvark.Base.Extensions.SystemDrawing.csproj
+++ b/src/Aardvark.Base.Extensions.SystemDrawing/Aardvark.Base.Extensions.SystemDrawing.csproj
@@ -2,7 +2,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <OutputType>Library</OutputType>
-    <TargetFramework>net471</TargetFramework>
+    <TargetFrameworks>net471;netcoreapp3.1</TargetFrameworks>
     <GenerateDocumentationFile>true</GenerateDocumentationFile>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
