--- a/src/Aardvark.Base.Extensions.SystemDrawing/Aardvark.Base.Extensions.SystemDrawing.csproj
+++ b/src/Aardvark.Base.Extensions.SystemDrawing/Aardvark.Base.Extensions.SystemDrawing.csproj
@@ -12,6 +12,7 @@
     <OutputPath>..\..\bin\Release</OutputPath>
   </PropertyGroup>
   <ItemGroup>
+    <ProjectReference Include="..\Aardvark.Base.Tensors\Aardvark.Base.Tensors.fsproj" />
     <ProjectReference Include="..\Aardvark.Base\Aardvark.Base.csproj" />
   </ItemGroup>
   <Import Project="..\..\.paket\Paket.Restore.targets" />
