--- a/src/Demo/RandomSampleDemo/RandomSampleDemo.csproj
+++ b/src/Demo/RandomSampleDemo/RandomSampleDemo.csproj
@@ -14,6 +14,7 @@
 	<RunWorkingDirectory>$(OutputPath)\netcoreapp3.1</RunWorkingDirectory>
   </PropertyGroup>
   <ItemGroup>
+    <ProjectReference Include="..\..\Aardvark.Base.Tensors\Aardvark.Base.Tensors.fsproj" />
     <ProjectReference Include="..\..\Aardvark.Base\Aardvark.Base.csproj" />
   </ItemGroup>
   <Import Project="..\..\..\.paket\Paket.Restore.targets" />
