--- a/src/Aardvark.PixImage.DevIL/paket.template
+++ b/src/Aardvark.PixImage.DevIL/paket.template
@@ -1,5 +1,5 @@
 type project
-id Aardvark.Base.Tensors.CSharp
+id Aardvark.PixImage.DevIL
 authors Aardvark Platform Team
 owners Aardvark Platform Team
 projectUrl http://github.com/aardvark-platform
