--- a/src/Aardvark.Base.Tensors.CSharp/Aardvark.Base.Tensors.CSharp.csproj
+++ b/src/Aardvark.Base.Tensors.CSharp/Aardvark.Base.Tensors.CSharp.csproj
@@ -1,28 +1,24 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
-
+﻿<?xml version="1.0" encoding="utf-8"?>
+<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <OutputType>Library</OutputType>
     <TargetFramework>netstandard2.0</TargetFramework>
   </PropertyGroup>
-  
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
     <OutputPath>..\..\bin\Debug\</OutputPath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
     <OutputPath>..\..\bin\Release</OutputPath>
   </PropertyGroup>
-
   <ItemGroup>
     <Compile Remove="**\*_template.cs" />
     <Compile Remove="**\*_generator.cs" />
   </ItemGroup>
-
   <ItemGroup>
     <None Include="**\*_template.cs" />
   </ItemGroup>
-
   <ItemGroup>
     <ProjectReference Include="..\Aardvark.Base\Aardvark.Base.csproj" />
   </ItemGroup>
-
+  <Import Project="..\..\.paket\Paket.Restore.targets" />
 </Project>
