--- a/src/Aardvark.PixImage.DevIL/Aardvark.PixImage.DevIL.csproj
+++ b/src/Aardvark.PixImage.DevIL/Aardvark.PixImage.DevIL.csproj
@@ -2,6 +2,8 @@
 <Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
+    <GenerateDocumentationFile>true</GenerateDocumentationFile>
+    <NoWarn>1591</NoWarn>
   </PropertyGroup>
   <ItemGroup>
     <ProjectReference Include="..\Aardvark.Base.Tensors\Aardvark.Base.Tensors.fsproj" />
