* fixed Plane3d.Transformed methods * fixed Plane3d.Point implementation

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -30,6 +30,13 @@
             "group": "build"
         },
         {
+            "label": "codegen",
+            "command": "dotnet",
+            "type": "shell",
+            "args": [ "run", "--project", "src/CodeGenerator/CodeGenerator.csproj" ],
+            "group": "build"
+        },
+        {
             "label": "build",
             "command": "dotnet",
             "type": "shell",
