* switched executable projects to net6.0 * added Plane3d.Transformed tests

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,5 @@
 {
+    "dotnet-test-explorer.testProjectPath": "src/Aardvark.sln",
     "files.exclude": {
         "**/.git": true,
         "**/.svn": true,
