--- a/src/Tests/Aardvark.Geometry.Tests/Aardvark.Geometry.Tests.fsproj
+++ b/src/Tests/Aardvark.Geometry.Tests/Aardvark.Geometry.Tests.fsproj
@@ -2,7 +2,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <TargetFramework>netcoreapp3.1</TargetFramework>
+    <TargetFramework>net6.0</TargetFramework>
     <DisableImplicitFSharpCoreReference>true</DisableImplicitFSharpCoreReference>
     <GenerateProgramFile>false</GenerateProgramFile>
     <WarnOn>3389</WarnOn>
@@ -14,7 +14,7 @@
     <OutputPath>..\..\..\bin\Release</OutputPath>
   </PropertyGroup>
   <PropertyGroup>
-	<RunWorkingDirectory>$(OutputPath)\netcoreapp3.1</RunWorkingDirectory>
+	<RunWorkingDirectory>$(OutputPath)\net6.0</RunWorkingDirectory>
   </PropertyGroup>
   <ItemGroup>
     <Compile Include="ImageLoading.fs" />
