--- a/.github/workflows/linux.yml
+++ b/.github/workflows/linux.yml
@@ -12,11 +12,10 @@ on:
     
 jobs:
   build:
-
     runs-on: ubuntu-latest
-
     steps:
-    - uses: actions/checkout@v1
+    - name: Checkout
+      uses: actions/checkout@v2
     - name: Install Dotnet
       uses: actions/setup-dotnet@v1
       with:
