--- a/.github/workflows/mac.yml
+++ b/.github/workflows/mac.yml
@@ -12,10 +12,13 @@ on:
     
 jobs:
   build:
-
     runs-on: macos-latest
-
     steps:
-    - uses: actions/checkout@v2
+    - name: Checkout
+      uses: actions/checkout@v2
+    - name: Install Dotnet
+      uses: actions/setup-dotnet@v1
+      with:
+        dotnet-version: '6.0.100'
     - name: Build
       run: bash ./build.sh
