--- a/.github/workflows/windows.yml
+++ b/.github/workflows/windows.yml
@@ -12,9 +12,13 @@ on:
     
 jobs:
   build:
-
     runs-on: windows-latest
     steps:
-    - uses: actions/checkout@v1
+    - name: Checkout
+      uses: actions/checkout@v2
+    - name: Install Dotnet
+      uses: actions/setup-dotnet@v1
+      with:
+        dotnet-version: '6.0.100'
     - name: build
       run: .\build.cmd
