--- a/src/Aardvark.Base.FSharp/Aardvark.Base.FSharp.fsproj
+++ b/src/Aardvark.Base.FSharp/Aardvark.Base.FSharp.fsproj
@@ -42,6 +42,8 @@
     <Compile Include="Datastructures\Mutable\ReferenceCountingSet.fs" />
     <Compile Include="Datastructures\Immutable\MapExt.fs" />
     <Compile Include="Datastructures\Immutable\FingerTree.fs" />
+    <None Include="Datastructures\Immutable\RangeSet_template.fs" />
+    <Compile Include="Datastructures\Immutable\RangeSet_auto.fs" />
     <Compile Include="Datastructures\Immutable\Graph.fs" />
     <Compile Include="Datastructures\Geometry\Boundable.fs" />
     <Compile Include="Datastructures\Geometry\KdTree.fs" />
