--- a/src/Tests/Aardvark.Base.Benchmarks/Aardvark.Base.Benchmarks.csproj
+++ b/src/Tests/Aardvark.Base.Benchmarks/Aardvark.Base.Benchmarks.csproj
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
-    <TargetFramework>net6.0</TargetFramework>
+    <TargetFrameworks>netcoreapp3.1;net6.0</TargetFrameworks>
     <ApplicationIcon />
     <GenerateProgramFile>false</GenerateProgramFile>
     <OutputType>Exe</OutputType>
