Port System.Drawing extensions to new PixLoader API

--- a/src/Aardvark.Base.Extensions.SystemDrawing/Aardvark.Base.Extensions.SystemDrawing.csproj
+++ b/src/Aardvark.Base.Extensions.SystemDrawing/Aardvark.Base.Extensions.SystemDrawing.csproj
@@ -3,7 +3,9 @@
   <PropertyGroup>
     <OutputType>Library</OutputType>
     <TargetFrameworks>net472;netcoreapp3.1</TargetFrameworks>
+    <LangVersion>8.0</LangVersion>
     <GenerateDocumentationFile>true</GenerateDocumentationFile>
+    <NoWarn>1591</NoWarn>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
     <OutputPath>..\..\bin\Debug</OutputPath>
