--- a/src/Aardvark.PixImage.WindowsMedia/paket.template
+++ b/src/Aardvark.PixImage.WindowsMedia/paket.template
@@ -1,8 +1,13 @@
 type project
-id Aardvark.PixImage.SystemImage
-authors VRVis Research Center
+id Aardvark.PixImage.WindowsMedia
+authors Aardvark Platform Team
+owners Aardvark Platform Team
+projectUrl http://github.com/aardvark-platform
+licenseUrl http://www.apache.org/licenses/LICENSE-2.0.txt
+repositoryType git
+repositoryUrl https://github.com/aardvark-platform/aardvark.base
 description
-    Aardvark.PixImage.SystemImage
+    Aardvark is an open-source platform for visual computing, real-time graphics and visualization.
 frameworkAssemblies
     PresentationCore
     WindowsBase
