[Trafo] Implement infinite far plane for perspective projection
This commit makes the far plane argument of
Trafo3*.PerspectiveProjection optional and allows infinite
to be passed in. Also adds overloads that accept a field of
view parameter instead of view volume dimensions.

--- a/src/Tests/Aardvark.Base.FSharp.Tests/Aardvark.Base.FSharp.Tests.fsproj
+++ b/src/Tests/Aardvark.Base.FSharp.Tests/Aardvark.Base.FSharp.Tests.fsproj
@@ -18,6 +18,7 @@
   </PropertyGroup>
   <ItemGroup>
     <EmbeddedResource Include="data\test.jpg" />
+    <Compile Include="TrafoTests.fs" />
     <Compile Include="TensorTests.fs" />
     <Compile Include="PixTests.fs" />
     <Compile Include="SVDTests.fs" />
