--- a/.github/workflows/linux.yml
+++ b/.github/workflows/linux.yml
@@ -16,9 +16,11 @@ jobs:
     steps:
     - name: Checkout
       uses: actions/checkout@v3
+    - name: Copy global.json
+      run: cp ./.github/global.json .
     - name: Install Dotnet
       uses: actions/setup-dotnet@v3
       with:
-        dotnet-version: '6.0.100'
+        global-json-file: global.json
     - name: Build
       run: sh ./build.sh
