--- a/src/Aardvark.PixImage.SystemDrawing/Aardvark.PixImage.SystemDrawing.csproj
+++ b/src/Aardvark.PixImage.SystemDrawing/Aardvark.PixImage.SystemDrawing.csproj
@@ -2,7 +2,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <OutputType>Library</OutputType>
-    <TargetFrameworks>net472;netcoreapp3.1</TargetFrameworks>
+    <TargetFrameworks>netstandard2.0</TargetFrameworks>
     <LangVersion>8.0</LangVersion>
     <GenerateDocumentationFile>true</GenerateDocumentationFile>
     <NoWarn>1591</NoWarn>
