--- a/src/Aardvark.PixImage.WindowsMedia/Aardvark.PixImage.WindowsMedia.csproj
+++ b/src/Aardvark.PixImage.WindowsMedia/Aardvark.PixImage.WindowsMedia.csproj
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <Project Sdk="Microsoft.NET.Sdk.WindowsDesktop">
   <PropertyGroup>
-    <TargetFrameworks>net6.0-windows;net472</TargetFrameworks>
+    <TargetFrameworks>net6.0-windows7.0;net472</TargetFrameworks>
     <LangVersion>8.0</LangVersion>
     <UseWindowsForms>true</UseWindowsForms>
     <UseWPF>true</UseWPF>
