--- a/src/Aardvark.Base.FSharp/Aardvark.Base.FSharp.fsproj
+++ b/src/Aardvark.Base.FSharp/Aardvark.Base.FSharp.fsproj
@@ -27,6 +27,7 @@
     <Compile Include="Utilities\Pickler\FsPicklerExtensions.fs" />
     <Compile Include="Utilities\Pickler\AdaptivePicklers.fs" />
     <Compile Include="Utilities\Threading.fs" />
+    <Compile Include="Utilities\IO.fs" />
     <Compile Include="Utilities\Measures.fs" />
     <Compile Include="Utilities\Lens.fs" />
     <Compile Include="Utilities\Monoid.fs" />
